--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://alejandronunezarroyo.github.io/portfolio/"
+baseurl = "https://alenunezarroyo.github.io/portfolio/"
 languageCode = "en-us"
 paginate = 5
 title = "Alejandro Núñez Arroyo"
